# CyberOrganism

./: .gitignore  README.md  RL_algorithm.py  RL_neural_network.py  custom_profiler.py  cyberorganism.json  cyberorganism.py  dqn.py  drawing.py  enums.py  files.txt  food.py  food_spawners.py  hyperparameter_tuning_interface.py  immutable_state_view.py  items.py  learning_process.py  main.py  main_runner.py  matrika.py  network_factory.py  network_statistics.py  notes.txt  organism.py  prioritized_experience_replay.py  process_pool.py  pyproject.toml  pytest.ini  requirements.txt  setup_instructions.md  shared_resources.py  simulation_engine.py  simulation_state.py  state_snapshot.py  state_view.py  summary_logger.py  test_multiprocessing.py  training_statistics.py  ui.py  widgets.py
gui/: drawing.py  hyperparameter_tuning_interface.py  simulation_state.py  ui.py  widgets.py
inference/: inference_process.py
learner/: process_pool.py
learning/: learner_process_pool.py
notes/: cyberorganism_architecture.txt
shared/: constants.py  custom_profiler.py  ipc_utils.py  network_factory.py  summary_logger.py
simulation/: RL_algorithm.py  dqn.py  food.py  food_spawners.py  items.py  organism.py  prioritized_experience_replay.py  simulation_engine.py  state_snapshot.py
src/: __init__.py  app.py  commands.py  keybindings.py  logger.py  models.py  store.py  ui.py
testing/: test_inference.py
testing/test_data/: dummy_network_weights.pth  dummy_states.json
tests/: test_ctrl_enter.py  test_handle_enter.py  test_input_handling.py  test_taskpad.py
