[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberorganism"
version = "0.1.0"
description = "A tag-based task management TUI system"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.0",  # For terminal input handling
    "pynput==1.7.7",    # For input monitoring and control
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
cyberorganism = "cyberorganism:main"
